--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,22 +1,21 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: Central Illinois Helpdesk
+  site: 'https://centralillinoishelpdesk.com'
   base: '/'
   trailingSlash: false
-
-  googleSiteVerificationId: orcPxI47GSa-cRvY11tUe6iGg2IO_RPvnA1q95iEM3M
+  googleSiteVerificationId: 
 
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
+    default: Centrl Illinois Helpdesk
+    template: '%s | Central Illinois Helpdesk'
   description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: Central Illinois Helpdesk
     images:
       - url: '~/assets/images/default.png'
         width: 1200
