--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@astrojs/sitemap": "^3.0.0",
     "@astrolib/analytics": "^0.4.2",
     "@astrolib/seo": "^1.0.0-beta.4",
+    "@egoist/tailwindcss-icons": "^1.2.0",
     "@fontsource-variable/inter": "^5.0.8",
+    "@iconify-json/clarity": "^1.1.9",
+    "@iconify-json/line-md": "^1.1.29",
+    "@iconify-json/svg-spinners": "^1.1.2",
     "astro": "^3.1.2",
     "astro-icon": "^1.0.0-next.2",
     "limax": "4.1.0",
