--- a/package.json
+++ b/package.json
@@ -13,43 +13,43 @@
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/rss": "^4.0.1",
+    "@astrojs/sitemap": "^3.0.3",
     "@astrolib/analytics": "^0.4.2",
-    "@astrolib/seo": "^1.0.0-beta.4",
-    "@egoist/tailwindcss-icons": "^1.2.0",
-    "@fontsource-variable/inter": "^5.0.8",
-    "@iconify-json/clarity": "^1.1.9",
-    "@iconify-json/line-md": "^1.1.29",
+    "@astrolib/seo": "1.0.0-beta.5",
+    "@egoist/tailwindcss-icons": "^1.7.1",
+    "@fontsource-variable/inter": "^5.0.16",
+    "@iconify-json/clarity": "^1.1.12",
+    "@iconify-json/line-md": "^1.1.33",
     "@iconify-json/svg-spinners": "^1.1.2",
-    "astro": "^3.1.2",
-    "astro-icon": "^1.0.0-next.2",
+    "astro": "^4.0.6",
+    "astro-icon": "1.0.0-next.2",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "unpic": "^3.10.0"
+    "unpic": "^3.16.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^1.1.0",
-    "@astrojs/partytown": "^2.0.0",
-    "@astrojs/tailwind": "5.0.0",
-    "@iconify-json/flat-color-icons": "^1.1.7",
-    "@iconify-json/tabler": "^1.1.91",
+    "@astrojs/mdx": "^2.0.1",
+    "@astrojs/partytown": "^2.0.2",
+    "@astrojs/tailwind": "5.0.3",
+    "@iconify-json/flat-color-icons": "^1.1.10",
+    "@iconify-json/tabler": "^1.1.102",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/lodash.merge": "^4.6.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "astro-compress": "^2.0.15",
-    "eslint": "^8.49.0",
-    "eslint-plugin-astro": "^0.29.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "@types/lodash.merge": "^4.6.9",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "astro-compress": "^2.2.5",
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.2",
     "reading-time": "^1.5.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.14.1"
