--- a/src/config.yaml
+++ b/src/config.yaml
@@ -43,7 +43,7 @@ apps:
 
     list:
       isEnabled: true
-      pathname: 'blog' # Blog main path, you can change this to "articles" (/articles)
+      pathname: 'knowledgebase' # Blog main path, you can change this to "articles" (/articles)
       robots:
         index: true
 
