content fixes and small package update

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify-json/svg-spinners": "^1.2.0",
     "astro": "^4.15.9",
     "astro-icon": "1.0.0-next.2",
+    "cheerio": "^1.0.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "unpic": "^3.18.0"
@@ -34,7 +35,7 @@
     "@astrojs/partytown": "^2.1.2",
     "@astrojs/tailwind": "5.0.3",
     "@iconify-json/flat-color-icons": "^1.2.0",
-    "@iconify-json/tabler": "^1.2.3",
+    "@iconify-json/tabler": "^1.2.4",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash.merge": "^4.6.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
