--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@onwidget/astrowind",
-  "description": "AstroWind: A free template using Astro 3.0 and Tailwind CSS. Astro starter theme.",
-  "version": "1.0.0-beta.6",
+  "name": "cihelpdesk-website",
+  "description": "Central Illinois Helpdesk Website",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -13,45 +13,43 @@
     "lint:eslint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^4.1.1",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrolib/analytics": "^0.4.2",
-    "@astrolib/seo": "1.0.0-beta.5",
+    "@astrojs/netlify": "^5.5.4",
+    "@astrojs/rss": "^4.0.9",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrolib/analytics": "^0.6.1",
+    "@astrolib/seo": "1.0.0-beta.8",
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@fontsource-variable/inter": "^5.1.0",
-    "@iconify-json/clarity": "^1.2.0",
-    "@iconify-json/line-md": "^1.2.1",
-    "@iconify-json/svg-spinners": "^1.2.0",
-    "astro": "^4.15.9",
-    "astro-icon": "1.0.0-next.2",
-    "cheerio": "^1.0.0",
+    "@iconify-json/clarity": "^1.2.1",
+    "@iconify-json/line-md": "^1.2.2",
+    "astro": "^4.16.8",
+    "astro-icon": "*",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "unpic": "^3.18.0"
+    "unpic": "^3.19.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^2.3.1",
+    "@astrojs/mdx": "^3.1.9",
     "@astrojs/partytown": "^2.1.2",
-    "@astrojs/tailwind": "5.0.3",
+    "@astrojs/tailwind": "5.1.2",
     "@iconify-json/flat-color-icons": "^1.2.0",
-    "@iconify-json/tabler": "^1.2.4",
+    "@iconify-json/tabler": "^1.2.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash.merge": "^4.6.9",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "astro-compress": "^2.3.1",
-    "eslint": "^8.57.1",
-    "eslint-plugin-astro": "^0.29.1",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
+    "astro-compress": "^2.3.5",
+    "eslint": "^9.14.0",
+    "eslint-plugin-astro": "^1.3.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.12.3",
+    "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "*",
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18.14.1"
