--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@fontsource-variable/inter": "^5.1.0",
     "@iconify-json/clarity": "^1.2.1",
     "@iconify-json/line-md": "^1.2.2",
-    "astro": "^4.16.8",
-    "astro-icon": "*",
+    "astro": "^4.16.10",
+    "astro-icon": "^1.1.2",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
-    "unpic": "^3.19.0"
+    "unpic": "^3.20.0"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
@@ -36,11 +36,11 @@
     "@iconify-json/tabler": "^1.2.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash.merge": "^4.6.9",
-    "@typescript-eslint/eslint-plugin": "^8.12.2",
-    "@typescript-eslint/parser": "^8.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "astro-compress": "^2.3.5",
     "eslint": "^9.14.0",
-    "eslint-plugin-astro": "^1.3.0",
+    "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
@@ -48,7 +48,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "*",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "engines": {
